# krever

./: CMakeLists.txt  README.md  package.xml
description/: gazebo_control.xacro
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/krever_controller/lib/krever_controller/: test_node
install/krever_controller/share/krever_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/krever_controller/share/krever_controller/launch/: gazebo_launch.py  spwan_gazebo.py
install/krever_controller/share/krever_controller/xacro/: inertia_macro.xacro
install/robot_controller/share/robot_controller/: local_setup.sh  package.dsv  package.ps1  package.sh
install/robot_controller/share/robot_controller/rviz/: config.rviz
launch/: rsp.launch.py
log/: latest_build  latest_list
src/krever_controller/: package.xml  setup.cfg  setup.py
src/krever_controller/description/: body.urdf  body.urdf.xacro  body.xacro  body_core.xacro  robot.urdf
src/krever_controller/launch/: rsp.launch.py  rviz_launch.py
src/krever_controller/rviz/: config.rviz
src/krever_controller/sdf/: robot.sdf
src/krever_controller/xacro/: body.xacro
